@@ -53,13 +53,13 @@
     <section class="section_contacto">
 
         
-        <form class="form_contacto" action="../enviar.php" method="post" enctype="text/plain">
+        <form class="form_contacto" action="../enviar.php" method="post">
             
             <fieldset class="field_contacto">
                 <h2>DEJANOS TU MENSAJE</h2>
                 <div class="div_consulta">
                     <label for="nombre">NOMBRE O RAZÓN SOCIAL</label>
-                    <input type="text" placeholder="Ingrese su nombre o razón social" id="nombre" name="nombre">
+                    <input type="text" placeholder="Ingrese su nombre o razón social" id="nombre" name="nombre" value="nombre">
                 </div>
                 <div class="div_consulta">
                     <label for="email">EMAIL</label>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="terminosYcondiciones" >
                     <input type="checkbox" id="tyc" style="margin-right: 5px;">
-                    <label for="tyc">ACEPTO LOS TÉRMINOS Y CONDICIONES</label>
+                    <label for="tyc">ACEPTO TÉRMINOS Y CONDICIONES</label>
                     
                 </div>
                 
