@@ -1,0 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="Venta de sabores, venta de ingredientes, venta de insumos alimenticios">
+    <meta name="description" content="Contactate con nosotros y obtené la mejor calidad en insumos para alimentos"> 
+    <link rel="icon" type="image/x-icon" href="../img/flavicon sabores.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Contacto</title>
+</head>
+<body>
+
+    <header class="encabezado">
+        <img src="../img/logo sabores.jpg" alt="" class="logoSabores">
+    
+        
+        <nav class="navegador">
+            <input type="checkbox" id="menuHamburguesa">
+            <label class="labelHamburguesa" for="menuHamburguesa"> ☰ </label>
+
+            <ul class="listaNav">
+                <a href="../index.html" class="vinculos">
+                    <li>INICIO</li>
+                </a>
+                <a href="sabores.html" class="vinculos">
+                    <li>SABORES</li>
+                </a>
+                <a href="ingredientes.html" class="vinculos">
+                    <li>INGREDIENTES</li>
+                </a>
+                <a href="aditivos.html" class="vinculos">
+                    <li>ADITIVOS</li>
+                </a>
+                <a href="contacto.html" class="vinculos">
+                    <li>CONTACTO</li>
+                </a>
+            </ul>
+        </nav>
+
+
+    </header>
+
+    <main>
+        <h2 style="text-align: center; margin-top: 20px;">GRACIAS POR SU MENSAJE, EN BREVE NOS ESTAREMOS COMUNICANDO CON USTEDES</h2>
+    </main>
+
+
+    
+
+
+
+    <footer>
+        <p class="footerParrafo">Copyright ©  Mariano Guardia Soft. Contacto: +54 9 261 5444-338 mail: mguardia50@hotmail.com Mendoza, Argentina</p>
+    </footer> 
+
+
+    
+</body>
+</html>
